[KNOWN PROBLEMS]
#2026_01 After a LSM contextMenu was shown and a checkbox was clicked (on the checkbox's label!), the next opened contextMenu's checkbox label
  is not changing the checkbox state (as if the first click is not accepted?), only the 2nd click does. (noticed during BMU LCM -> LSM changes at 2026-01-25)

[Fixed]
--#2026_02 Nil error at combobox header collapsed state SavedVariables


-v- ---------------LSM v2.40 - 2025-12-14--------------------------------------------------------------------------- -v-
[Added]
#2025_63 Add options.headerCollapsedIcon and options.headerCollapsedTitle
--		table headerCollapsedIcon				table or function returning a table of signature { iconTexture = "path/to/textureName.dds", iconTint=ZO_ColorDef, width=number, height=number, align=LEFT|CENTER(default)|RIGHT, offSetX=12, offSetY=-12 }: Icon shown as the header is collapsed (e.g. a magnifying glass to show you can expand it to get a search). Default value is nil. Height is capped at 32!
--		table headerCollapsedTitle				table or function returning a table of signature { text = "Click to search", color=ZO_ColorDef, font="FontNameHere", align=LEFT|CENTER(default)|RIGHT, offSetX=12, offSetY=-12 }: Title text shown as the header is collapsed (e.g. a text to show you can expand the section and see the search). Default value is nil.
#2025_64 options.headerToggleTooltip
--		string headerToggleTooltip				String or function returning a string: Tooltip text for the collapse/expand buttons. Function signature function(state). Default: returns "Collapse"/"Expand" strings from vanilla ESOUI, depending on the current state


-v- ---------------LSM v2.39 - 2025-12-09--------------------------------------------------------------------------- -v-
[Fixed]
#2025_62 headerCollapsed is not working and making the search header always collapsed on open (it still uses last used state as it seems)
