@@ -2,6 +2,7 @@
 [KNOWN PROBLEMS]
 #2026_01 After a LSM contextMenu was shown and a checkbox was clicked (on the checkbox's label!), the next opened contextMenu's checkbox label
   is not changing the checkbox state (as if the first click is not accepted?), only the 2nd click does. (noticed during BMU LCM -> LSM changes at 2026-01-25)
+#2026_03 Search header contextMenu for last searched does not work on BeamMeUp item filter header?
 
 [Fixed]
 --#2026_02 Nil error at combobox header collapsed state SavedVariables
